--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,10 @@
     />
   </head>
   <body>
+    <div id="page-preloader" class="preloader">
+      <div class="loader"></div>
+    </div>
+
     <div class="form">
       <form class="search-form" id="search-form">
         <input type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
@@ -27,6 +31,7 @@
       <button type="button" class="load-more is-hidden">Load more</button>
     </div>
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
+    <script src="./js/preloader.js"></script>
     <script src="./index.js"></script>
   </body>
 </html>
