--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
         <!-- Карточки изображений -->
       </div>
 
-      <button type="button" class="load-more is-hidden">Load more</button>
+      <button type="button" class="load-more is-hidden">Load more!</button>
     </div>
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./js/preloader.js"></script>
