--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
       <button type="button" class="load-more is-hidden">Load more!</button>
     </div>
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
-    <script src="./js/preloader.js"></script>
+    <!-- <script src="./js/preloader.js"></script> -->
     <script src="./index.js"></script>
   </body>
 </html>
