--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,9 @@
     />
   </head>
   <body>
-    <div id="page-preloader" class="preloader">
+    <!-- <div id="page-preloader" class="preloader">
       <div class="loader"></div>
-    </div>
+    </div> -->
 
     <div class="form">
       <form class="search-form" id="search-form">
